<resources>
    <string name="app_name">短信转邮件</string>
    <string name="smtp_address">Smtp地址</string>
    <string name="smtp_ssl_port">Smtp SSL端口</string>
    <string name="account">账号</string>
    <string name="auth_code">授权码</string>
    <string name="recipient">接收人邮件地址</string>
    <string name="email_message_title">邮件消息标题</string>
    <string name="reduction">还原</string>
    <string name="save">保存</string>
    <string name="email_test">邮件测试</string>
    <string name="email_sent_config">邮件发送配置</string>
    <string name="please_input_xx">请输入\"%s\"</string>
    <string name="config_save">配置信息保存成功</string>
    <string name="config_incomplete">邮件配置信息不完整，发送失败</string>
    <string name="test_email_content">这是一封测试邮件配置是否正确的邮件!</string>
    <string name="quit_soft_tip">确定退出吗?</string>
    <string name="email_sent">邮件已发送</string>
    <string name="email_sent_fail_tip">邮件第%d/%d次发送失败, %d秒后重试。</string>
</resources>