<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="click"
            type="android.view.View.OnClickListener" />

        <variable
            name="config"
            type="com.mjsoftking.smstoemail.bean.LocalConfig" />
    </data>

    <LinearLayout
        android:id="@+id/sentMailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/email_sent_config"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_big" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smtp_address"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_normal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textUri"
            android:maxLength="35"
            android:text="@={config.smtpHost}"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/main_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smtp_ssl_port"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_normal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={config.smtpSSLPort}"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/main_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_normal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:maxLength="100"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:text="@={config.account}"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/main_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_code"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_normal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:maxLength="100"
            android:text="@={config.pwd}"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/main_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipient"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_normal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:text="@={config.receiveEmail}"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/main_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_message_title"
            android:textColor="@color/main_color"
            android:textSize="@dimen/text_size_normal" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="text"
            android:text="@={config.messageTitle}"
            android:maxLength="25"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/main_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:gravity="center"
                android:onClick="@{click::onClick}"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/reduction"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button2"
                android:gravity="center"
                android:onClick="@{click::onClick}"
                android:text="@string/reduction"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/emailTest"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button3"
                android:gravity="center"
                android:onClick="@{click::onClick}"
                android:text="@string/email_test"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big" />
        </LinearLayout>
    </LinearLayout>
</layout>